# Archivist

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
fastapi-app/: main.py
fastapi-app/core/: config.py
fastapi-app/core/models/: base.py
fastapi-app/modules/: file_search.py  models.py
modules/: file_search.py
